End-to-end integration testing for core functionality...though I'm not sure if it is end to end. Regardless, tests are passing